# hi

./: .gitignore  ho.py
Codigo aparte/ariana/: CMakeLists.txt  main.cpp  pch.cpp  pch.h
Practica/inverso/: main.cpp
UCSP/: polla.txt
UCSP/Python/: Alexis Elefteriu 4.py
UCSP/Python/Alexis/: Alexis Elefteriu 1.py  Alexis Elefteriu 2.py  (+8 more)
UCSP/date/: main.cpp
UTEC/C++/proyecto2/: CMakeLists.txt  main.cpp
UTEC/Python/: 15.py  2.py  3.py  EJEMPLO 1.py  acid.py  anmg.py  borrador.py  borradorhoja normal.py  cadena 6.py  cadena 7.py  cadena3.py  cadena4.py  cadenas.py  cadenas2.py  cadenas5.py  cajeros.py  coordenadas.py  diccionario.py  dis.py  ejem1.py  funcion general.py  funciones 4.py  funciones 7.py  funciones1.py  funciones2.py  funciones3.py  funciones5.py  funciones6.py  funciones8.py  funciones9.py  ho.py  if 2.py  if 3.py  if.py  if1.py  lista 2.py  lista 4.py  lista1.py  lista3.py  lista5.py  (+10 more)
admindememoria/: main.cpp
codigos/: main.cpp
complejos/include/: complejo.h
complejos/src/: complejo.cpp
date/include/: fecha.h
date/src/: fecha.cpp
empresa/include/: business.h  employe.h
empresa/src/: employe.cpp
factorial/: main.cpp
factorial/bisiestofac/: main.cpp
factorial/eneprifac/: main.cpp
factorial/potencia/: main.cpp
factorial/primosfac/: main.cpp
hola/: hola.depend  main.cpp
hola_mundo/: main.cpp
jugador/: main.cpp
jugador1/: main.cpp
jugador1/include/: jugador.h
jugador1/src/: team.cpp
mayormenor/: main.cpp
project euler/pregunta1/: main.cpp
project euler/pregunta2/: main.cpp
project euler/pregunta3/: main.cpp
(+108 files in other folders)
